# switchy

./: Cargo.toml  ReadMe.md
src/: config.rs  main.rs
