[package]
name = "switchy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive"] }
colored = "2.1.0"
ctrlc = "3.4.4"
dialoguer = { version = "0.11.0", features = ["editor", "fuzzy-select"], default-features = false }
directories = "5.0"
serde = { version = "1.0.204", features = ["derive"] }
toml = "0.8.15"
